# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: tests-on-push.yml
src/your_pkg/: main.py
src/your_pkg/utils/: logger_config.py
tests/unittests/: test_main.py
